crates/sotf-plugins/tests/snapshots/render_plan_snapshots__convolution__convolution__ipad_portrait.snap
---
source: crates/sotf-plugins/tests/render_plan_snapshots.rs
assertion_line: 57
expression: plan
---
{
  "plugin_type": "convolution",
  "width": 768.0,
  "design_language": "neutral",
  "corner_radius_md": 8.0,
  "min_touch_target": 32.0,
  "toggle_variant": "capsule",
  "label_position": "below",
  "orientation": "horizontal",
  "knob_size": "sm",
  "group_direction": "row",
  "slider_height": 180.0,
  "show_visualizations": true,
  "columns_visible": [
    "main"
  ],
  "columns_collapsed": [],
  "visible_group_ids": [
    "CONVOLUTION"
  ],
  "overflow_group_ids": [],
  "config_controls": [],
  "main_groups": [
    {
      "id": "CONVOLUTION",
      "title": "CONVOLUTION",
      "controls": [
        {
          "param_index": 0,
          "param_name": "IR File",
          "control_type": "file_picker",
          "unit": "",
          "range": null,
          "read_only": false,
          "enabled": true
        },
        {
          "param_index": 1,
          "param_name": "Mix",
          "control_type": "knob",
          "unit": "%",
          "range": [
            0.0,
            1.0
          ],
          "read_only": false,
          "enabled": true
        },
        {
          "param_index": 2,
          "param_name": "Gain",
          "control_type": "knob",
          "unit": "dB",
          "range": [
            -20.0,
            20.0
          ],
          "read_only": false,
          "enabled": true
        }
      ]
    }
  ],
  "output_controls": [],
  "tabs": [
    {
      "name": "Advanced",
      "controls": [
        {
          "param_index": 3,
          "param_name": "Use NUPC",
          "control_type": "toggle",
          "unit": "",
          "range": [
            0.0,
            1.0
          ],
          "read_only": false,
          "enabled": true
        },
        {
          "param_index": 4,
          "param_name": "Zero-Latency Head",
          "control_type": "toggle",
          "unit": "",
          "range": [
            0.0,
            1.0
          ],
          "read_only": false,
          "enabled": true
        },
        {
          "param_index": 5,
          "param_name": "Head Taps",
          "control_type": "knob",
          "unit": "",
          "range": [
            32.0,
            512.0
          ],
          "read_only": false,
          "enabled": true
        }
      ]
    }
  ],
  "viz_slots": [],
  "dynamic_sections": []
}
